Fixed Text Overflow in Dialog Boxes

--- a/css/global.css
+++ b/css/global.css
@@ -687,6 +687,8 @@ main {
 }
 
 .dialog .message {
+  max-height: 200pt;
+  overflow-y: scroll;
   margin: 0 0 10pt 0;
   white-space: pre-line;
   word-break: break-all;
